update yaml schema and remove job
