# src/config/swagger.yaml
@@ -21,6 +21,13 @@ paths:
       responses:
         200:
           description: "A list of skills with job count"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  # อ้างอิงไปที่ Component เพื่อแสดงรายละเอียด
+                  $ref: "#/components/schemas/dashboardTopSkill"
         400:
           description: "Invalid type parameter"
         404:
@@ -211,23 +218,6 @@ paths:
           description: "A list of jobs"
         400:
           description: "Invalid request"
-        404:
-          description: "Data not found"
-
-  /job/search/subcatagory/{sub_category_id}:
-    get:
-      summary: "Get jobs by subcatagory id"
-      tags:
-        - "job"
-      parameters:
-        - name: "sub_category_id"
-          in: "path"
-          description: "The sub_category_id of the job"
-          required: true
-          type: "integer"
-      responses:
-        200:
-          description: "A list of jobs"
         404:
           description: "Data not found"
 
@@ -547,155 +537,40 @@ paths:
 
 components:
   schemas:
-    basicinfo:
+    masterResponse:
       type: object
       properties:
-        job_id:
+        success:
+          type: boolean
+        countObj:
           type: number
-        title:
-          type: string
-        type:
-          type: string
-        status:
-          type: string
-        posted_date:
-          type: string
-          format: date-time
-        expiry_date:
-          type: string
-          format: date-time
-    jobByStatus:
-      type: object
-      properties:
-        status:
-          type: string
-          default: ""
+        total:
+          type: number
           nullable: true
-          description: Job status (e.g., 'active', 'expired').
-        limit:
-          type: integer
-          default: 100
-          description: The maximum number of records to retrieve. A lower limit (e.g., 50-100) is recommended to prevent system hang-ups.
-        offset:
-          type: integer
-          default: 0
-          description: The starting point for pagination.
-    jobByMaxSalaryNjobByMinSalary:
-      type: object
+    #Ter
+    dashboardTopSkill:
+      allOf:
+        - $ref: "#/components/schemas/masterResponse"
+        - type: object
       properties:
-        subCategoryName:
-          type: string
-          default: ""
-          nullable: true
-          description: Job Category Name (e.g., 'Computer Operators', 'Engineering - Network').
-        top:
-          type: integer
-          default: 5
-          description: The maximum number of records to retrieve. A lower limit (e.g., 5-100) is recommended to prevent system hang-ups.
-    classification:
-      type: object
+        data:
+          type: object
+          properties:
+            skill_name:
+              type: string
+            sumJobCount:
+              type: number
+    #Art
+    dashboardJobRatioBySubcategory:
+      allOf:
+        - $ref: "#/components/schemas/masterResponse"
+        - type: object
       properties:
-        job_id:
-          type: number
-        main_category_id:
-          type: number
-        sub_category_id:
-          type: number
-    company:
-      type: object
-      properties:
-        company_id:
-          type: number
-        name:
-          type: string
-        short_name:
-          type: string
-        industry:
-          type: string
-        verified:
-          type: number
-        company_search_url:
-          type: string
-        registration_date:
-          type: string
-          format: date-time
-        company_size:
-          type: string
-    jobs:
-      type: object
-      properties:
-        job_id:
-          type: number
-        company_id:
-          type: number
-        content:
-          type: string
-        share_link:
-          type: string
-    jobs_skill:
-      type: object
-      properties:
-        job_id:
-          type: number
-        skill_name:
-          type: string
-        skill_type:
-          type: string
-    location:
-      type: object
-      properties:
-        job_id:
-          type: number
-        area:
-          type: string
-        city:
-          type: string
-        country:
-          type: string
-    main_category:
-      type: object
-      properties:
-        main_category_id:
-          type: number
-        name:
-          type: string
-    salary:
-      type: object
-      properties:
-        job_id:
-          type: number
-        min_salary:
-          type: number
-        max_salary:
-          type: number
-        currency:
-          type: string
-        period:
-          type: string
-        has_salary_info:
-          type: number
-    sub_category:
-      type: object
-      properties:
-        sub_category_id:
-          type: number
-        name:
-          type: string
-    jobByIndustry:
-      name: industry
-      in: path
-      required: true
-      description: |
-        Industry of the job. If not provided, all industries will be included.
-        If you want to filter jobs with no specified industry, set the value to `null`.
-      schema:
-        type: string
-    jobByCompanySize:
-      name: companySize
-      in: path
-      required: true
-      description: |
-        Company size of the job. If not provided, all company sizes will be included.
-        If you want to filter jobs with no specified company size, set the value to `null`.
-      schema:
-        type: string
+        data:
+          type: object
+          properties:
+            sub_category_name:
+              type: string
+            total_jobs:
+              type: number
+    #Max
