# src/controllers/job.controller.js
@@ -174,176 +174,3 @@ export async function searchJob(req, res) {
     return res.status(500).json({ success: false, errormessage: e.message });
   }
 }
-
-//max
-
-//art
-export async function fetchJobBySubcatagoryId(req, res) {
-  console.log(`GET /fetchJobBySubcatagoryId is requested`);
-  console.log(req);
-
-  try {
-    const result = await database.query({
-      text: `
-        SELECT 
-          j.job_id,
-          cm.company_id,
-          cm.name AS company_name, 
-          cm.short_name,
-          cm.industry,
-          cm.company_size,
-          cm.company_search_url,
-          jl.area,
-          jl.city,
-          jl.country,
-          jb.title,
-          jb.type,
-          m.main_category_id,
-          m.name AS main_category_name,
-          s.sub_category_id,
-          s.name AS sub_category_name,
-          jsr.min_salary,
-          jsr.max_salary,
-          jsr.currency,
-          jsr.period,
-          jb.status,
-          jb.posted_date,
-          jb.expiry_date,
-          j.content,
-          j.share_link,
-          
-	        (
-            SELECT json_agg(js.skill_name) -- json_agg(row_to_json(js.skill_name)) 
-            FROM jobs_skill js 
-            WHERE js.job_id = j.job_id AND js.skill_type = 'soft_skill'
-          ) AS soft_skills,
-          (
-            SELECT json_agg(js.skill_name)
-            FROM jobs_skill js 
-            WHERE js.job_id = j.job_id AND js.skill_type = 'hard_skill'
-          ) AS hard_skills
-           
-        FROM jobs j
-        INNER JOIN company cm ON j.company_id = cm.company_id
-        INNER JOIN location jl ON j.job_id = jl.job_id
-        INNER JOIN basicinfo jb ON j.job_id = jb.job_id
-        INNER JOIN salary jsr ON j.job_id = jsr.job_id
-        INNER JOIN classification c ON j.job_id = c.job_id
-        INNER JOIN main_category m ON c.main_category_id = m.main_category_id
-        INNER JOIN sub_category s ON c.sub_category_id = s.sub_category_id
-        LEFT JOIN jobs_skill jsk ON j.job_id = jsk.job_id
-
-        WHERE s.sub_category_id = $1
-
-        GROUP BY 
-          j.job_id,
-          cm.company_id,
-          cm.name, 
-          cm.short_name,
-          cm.industry,
-          cm.company_size,
-          cm.company_search_url,
-          jl.area,
-          jl.city,
-          jl.country,
-          jb.title,
-          jb.type,
-          m.main_category_id,
-          m.name,
-          s.sub_category_id,
-          s.name,
-          jsr.min_salary,
-          jsr.max_salary,
-          jsr.currency,
-          jsr.period,
-          jb.status,
-          jb.posted_date,
-          jb.expiry_date,
-          j.content,
-          j.share_link
-      `,
-      values: [req.params.sub_category_id],
-    });
-
-    if (result.rowCount == 0) {
-      return res
-        .status(404)
-        .json({ success: false, errormessage: `Data not found` });
-    } else {
-      let data = [];
-      for (let i = 0; i < result.rows.length; i++) {
-        data.push({
-          job_id: result.rows[i]["job_id"],
-          basicInfo: {
-            title: result.rows[i]["title"],
-            type: result.rows[i]["type"],
-            status: result.rows[i]["status"],
-            postedDate: result.rows[i]["posted_date"],
-            expiryDate: result.rows[i]["expiry_date"],
-          },
-          salary: {
-            minSalary: result.rows[i]["min_salary"],
-            maxSalary: result.rows[i]["max_salary"],
-            currency: result.rows[i]["currency"],
-            period: result.rows[i]["period"],
-          },
-          classification: {
-            mainCategory: {
-              id: result.rows[i]["main_category_id"],
-              name: result.rows[i]["main_category_name"],
-            },
-            subCategory: {
-              id: result.rows[i]["sub_category_id"],
-              name: result.rows[i]["sub_category_name"],
-            },
-          },
-          location: {
-            area: result.rows[i]["area"],
-            city: result.rows[i]["city"],
-            country: result.rows[i]["country"],
-          },
-          company: {
-            id: result.rows[i]["company_id"],
-            name: result.rows[i]["company_name"],
-            shortName: result.rows[i]["short_name"],
-            industry: result.rows[i]["industry"],
-            size: result.rows[i]["company_size"],
-          },
-          content: result.rows[i]["content"],
-          extractSkills: {
-            hardSkills: result.rows[i]["hard_skills"],
-            softSkills: result.rows[i]["soft_skills"],
-          },
-        });
-      }
-
-      return res.json({
-        success: true,
-        count: result.rows.length,
-        data,
-      });
-    }
-  } catch (e) {
-    console.error("Error executing searchJob query", e);
-    return res.status(500).json({ success: false, errormessage: e.message });
-  }
-}
-
-export async function fetchJobByDateRange(req, res) {
-  console.log(`POST /fetchJobByDateRange is requested`);
-  // const bodyData = req.body;
-  const { start, end } = req.body;
-  try {
-    console.log(start);
-    console.log(end);
-
-    return res.json({
-      success: true,
-      start,
-      end,
-    });
-  } catch (e) {
-    console.error("Error executing searchJob query", e);
-    return res.status(500).json({ success: false, errormessage: e.message });
-  }
-}
